--- a/staticman.yml
+++ b/staticman.yml
@@ -2,7 +2,7 @@
 # different config blocks for different sections of your site.
 # For example, you can have one property to handle comment submission and
 # another one to handle posts.
-comments:
+files:
   # (*) REQUIRED
   #
   # Name of the branch being used. Must match the one sent in the URL of the
