--- a/staticman.yml
+++ b/staticman.yml
@@ -47,8 +47,8 @@ files:
 
   # Names of required files. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["name", "email", "title", "description", "file"]
-  availableFields: ["name", "email", "title", "description", "file", "video_url"]
+  requiredFields: ["name", "email", "title", "description"]
+  availableFields: ["name", "email", "title", "description", "video_url"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
