--- a/staticman.yml
+++ b/staticman.yml
@@ -5,12 +5,18 @@
 files:
   # (*) REQUIRED
   #
+  # Names of the fields the form is allowed to submit. If a field that is
+  # not here is part of the request, an error will be thrown.
+  allowedFields: ["name", "email", "title", "description"]
+
+  # (*) REQUIRED
+  #
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
   branch: "master"
 
   # Text to use as the commit message or pull request title. Accepts placeholders.
-  commitMessage: "Uploaded new file"
+  commitMessage: "Add Staticman data"
 
   # (*) REQUIRED
   #
@@ -37,8 +43,24 @@ files:
   moderation: true
 
   # Name of the site. Used in notification emails.
-  name: "sgsvertigo.github.io"
+  name: "eduardoboucas.com"
 
+  # Notification settings. When enabled, users can choose to receive notifications
+  # via email when someone adds a reply or a new comment. This requires an account
+  # with Mailgun, which you can get for free at http://mailgun.com.
+  #notifications:
+    # Enable notifications
+    #enabled: true
+
+    # (!) ENCRYPTED
+    #
+    # Mailgun API key
+    #apiKey: "1q2w3e4r"
+
+    # (!) ENCRYPTED
+    #
+    # Mailgun domain (encrypted)
+    #domain: "4r3e2w1q"
 
   # (*) REQUIRED
   #
@@ -47,8 +69,7 @@ files:
 
   # Names of required files. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["name", "email", "title", "description"]
-  availableFields: ["name", "email", "title", "description", "video_url"]
+  requiredFields: ["name", "email", "title"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
